<resources>
    <string name="app_name">ShoeStore</string>
    <string name="user_email">E-mail:</string>
    <string name="user_password">Password:</string>
    <string name="new_login_button">Create new account</string>
    <string name="login_button">Login</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_fragment_title">Login</string>
    <string name="welcomo_fragment_title">Welcome</string>
    <string name="welcome_title">Welcome to shoe inventory!!</string>
    <string name="click_next">Click next to continue!!</string>
    <string name="next_button">Next!</string>
    <string name="instructions_fragment_title">Instructions</string>
    <string name="logout_title">Logout</string>
    <string name="instructions_titlw">Instrutions!</string>
    <string name="instructions_list">1. Click on next
        \n2. In product list, click on + button
        \n3. In details screen feel the details of the new shoes you want to add</string>
    <string name="shoe_list_fragment">Shoes List</string>
    <string name="shoe_list_title">Shoe list inventory</string>
    <string name="title_activity_details_shoe_fragment">DetailsShoeFragment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="details_fragment_title">Enter shoe details</string>
    <string name="company_label">Company:</string>
    <string name="name_label">Name:</string>
    <string name="size_label">Size:</string>
    <string name="description_label">Description:</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="brand_name">Brand name</string>
    <string name="shoe_reference">Shoe reference</string>
    <string name="shoe_size">Shoe Size</string>
    <string name="shoe_description">Shoe description</string>
</resources>
