<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/company_label"
            app:layout_constraintBaseline_toBaselineOf="@+id/companyTextView"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/name_label"
            app:layout_constraintBaseline_toBaselineOf="@+id/NameTextView"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/size_label"
            app:layout_constraintBaseline_toBaselineOf="@+id/SizeTextView"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/description_label"
            app:layout_constraintBaseline_toBaselineOf="@+id/DescriptionTextView"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/companyTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="150dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/brand_name"
            android:textAlignment="textEnd"
            app:layout_constraintBottom_toTopOf="@+id/NameTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@{shoe.company}" />

        <TextView
            android:id="@+id/NameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="150dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/shoe_reference"
            android:text="@{shoe.name}"
            android:textAlignment="textEnd"
            app:layout_constraintBottom_toTopOf="@+id/SizeTextView"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/SizeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="150dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/shoe_size"
            android:text="@{Double.toString(shoe.size)}"
            android:textAlignment="textEnd"
            app:layout_constraintBottom_toTopOf="@+id/DescriptionTextView"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/DescriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="150dp"
            android:hint="@string/shoe_description"
            android:text="@{shoe.description}"
            android:textAlignment="textEnd"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>