<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.DetailsShoeFragment">


        <TextView
            android:id="@+id/detailsTitle"
            style="@style/labels"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/details_fragment_title"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/companyText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/companyLabel"
            style="@style/labels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/company_label"
            app:layout_constraintBaseline_toBaselineOf="@+id/companyText"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/companyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:hint="@string/brand_name"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/nameText"
            android:text="@{shoe.company}"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/nameLabel"
            style="@style/labels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/name_label"
            app:layout_constraintBaseline_toBaselineOf="@+id/nameText"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/nameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:hint="@string/shoe_reference"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/sizeText"
            android:text="@{shoe.name}"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/sizeLabel"
            style="@style/labels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/size_label"
            app:layout_constraintBaseline_toBaselineOf="@+id/sizeText"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/sizeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:hint="@string/shoe_size"
            android:inputType="numberDecimal"
            app:layout_constraintBottom_toTopOf="@+id/descriptionText"
            android:text="@{Double.toString(shoe.size)}"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/descriptionLabel"
            style="@style/labels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/description_label"
            app:layout_constraintBaseline_toBaselineOf="@+id/descriptionText"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/descriptionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:ems="10"
            android:hint="@string/shoe_description"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/saveButton"
            android:text="@{shoe.description}"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/saveButton"
            style="@style/buttons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="16dp"
            android:background="@color/buttons"
            android:text="@string/save_button"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descriptionLabel" />

        <Button
            android:id="@+id/cancelButton"
            style="@style/buttons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:background="@color/buttons"
            android:text="@string/cancel_button"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/saveButton"
            app:layout_constraintVertical_bias="0.222" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>